<resources>
    <string name="app_name">Rally Point Alpha</string>
    <string name="action_add_member">Add Member</string>
    <string name="action_add_team">Add Team</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Log in</string>

    <!-- login text -->
    <string name="username">Username (Email)</string>
    <string name="password">Password</string>

    <!-- Page titles -->
    <string name="title_activity_registration">Sign Up</string>
    <string name="title_activity_home"></string>
    <string name="title_activity_create_team">Create a Team</string>
    <string name="action_settings">Settings</string>

    <!-- Create Team text -->
    <string name="team_name_prompt">Team Name</string>
    <string name="team_description_prompt">Team Description</string>
    <string name="team_add_members_prompt">Add Team Members</string>

    <!-- Search text -->
    <string name="title_activity_search_member">Find Members</string>
    <string name="member_search_text">Search for Members</string>
    <string name="title_activity_team_details"></string>
    <string name="title_activity_create_rally">Add Rally Point</string>
    <string name="title_activity_add_team_member">Add Team Member</string>

    <!-- Title Text -->

    <!-- Button Text -->
    <string name="button_text_cancel_add_team_members">Cancel</string>
    <string name="button_text_add_team_members">Add Members</string>
    <string name="button_text_cancel_rally_point">Cancel</string>
    <string name="button_text_create_rally_point">Add Rally Point</string>

    <string name="title_activity_rally_point_details">Rally Point Details</string>
</resources>
